--- a/lab01/exercise02/index.html
+++ b/lab01/exercise02/index.html
@@ -24,7 +24,8 @@
         
         <section>
             <h2>Card 3</h2>
-            <img src="https://picsum.photos/id/12/360/260" alt="picture of nature" />
+            <iframe src="https://www.youtube.com/watch?v=SofiPDt2ynE"
+    width=100% frameborder="0" allowfullscreen autoplay=1></iframe>
             <p>Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea. Est id aperiri offendit vulputate, legere malorum est et. Zril volutpat sit id, no aeterno apeirian mei.</p>
             <button>Button</button>
         </section>
@@ -34,6 +35,7 @@
             <img src="https://picsum.photos/id/13/360/260" alt="picture of nature" />
             <p>Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea. Est id aperiri offendit vulputate, legere malorum est et. Zril volutpat sit id, no aeterno apeirian mei.</p>
             <button>Button</button>
+            
         </section>
     </main>
   
