--- a/lab01/exercise02/index.html
+++ b/lab01/exercise02/index.html
@@ -24,8 +24,7 @@
         
         <section>
             <h2>Card 3</h2>
-            <iframe src="https://www.youtube.com/watch?v=SofiPDt2ynE"
-    width=100% frameborder="0" allowfullscreen autoplay=1></iframe>
+            <iframe src="https://www.youtube.com/embed/gskeEJ5uU_o" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <p>Lorem ipsum dolor sit amet, cu soluta concludaturque vim, summo voluptatibus ex sea. Est id aperiri offendit vulputate, legere malorum est et. Zril volutpat sit id, no aeterno apeirian mei.</p>
             <button>Button</button>
         </section>
